# Neos

./: Cargo.toml  package-lock.json  package.json
.cargo/: config.toml
app/: globals.css  page.module.css  page.tsx
src/: errors.rs  lib.rs  main.rs  tui.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/test/: TWChatLog_2024_04_20.html  TWChatLog_2024_04_20_no_data.html
test/: TWChatLog_2024_04_19_large.html  TWChatLog_2024_04_19_small.html
