[package]
name = "neos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
chrono-tz = "0.9.0"
color-eyre = "0.6.3"
crossterm = "0.27.0"
encoding_rs = "0.8.34"
ratatui = "0.26.2"
regex = "1.10.4"
